# -Agent

./: .env.example  .gitignore  .mcp.json  DURUM.md  Proje Amacı.txt  README.md  REVIEW.md  ROADMAP.md  pyproject.toml  test_kayit_agent.py  test_qwen.py
.claude/: settings.local.json
drafts/: evds%3ATP.AB.A01.md  evds%3ATP.AB.A02.md  evds%3ATP.AB.A03.md  evds%3ATP.AB.A09.md  evds%3ATP.AB.A11.md  evds%3ATP.AB.A12.md  evds%3ATP.AB.A13.md  evds%3ATP.AB.A14.md  evds%3ATP.AB.A16.md  evds%3ATP.AB.A17.md  evds%3ATP.AB.A18.md  evds%3ATP.AB.A23.md  evds%3ATP.AB.N06.md  evds%3ATP.BEK.S06.A.U.md  evds%3ATP.BEK.S06.B.U.md
examples/: import_template.csv
proposals/: proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_1%3A5132bf3288ee.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_10%3A1d96391207bf.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_11%3A2fbb49ce71b6.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_12%3A628744124b95.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_13%3A6becda9c13f6.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_14%3A2f53a0c44610.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_15%3A773f055d25bc.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_16%3Ae782f280addb.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_17%3A682cb0a0b046.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_18%3Addb0076dd960.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_19%3Aecba64c436ba.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_2%3Ab51b314ce43a.md  proposal%3Adth-blg-v7%3Aseries%3ATP_HPBITABLO2_20%3Ad9c7d93113d8.md  (+319 more)
tests/: conftest.py  test_cli.py  (+5 more)
(+1181 files in other folders)
